# rxx_configure_service

./: .gitignore
src/calibration/: CMakeLists.txt  package.xml
src/calibration/config/: camera_config.yaml  grap_config.yaml
src/calibration/include/: Kutil.cpp  Kutil.h
src/calibration/launch/: calibration.launch.py
src/calibration/src/: calibration_collect.cpp  csv_write.cpp  csv_write.h  device_launch_conf.cpp  network_config.cpp  network_config.h  network_control.cpp  network_control.h  network_test.cpp
src/calibration_srv/: CMakeLists.txt  package.xml
src/calibration_srv/srv/: CalibrationEyeInHand.srv
src/dobot_msgs_v3/: CMakeLists.txt  package.xml
src/dobot_msgs_v3/msg/: RobotStatus.msg  ToolVectorActual.msg
src/dobot_msgs_v3/srv/: AO.srv  AOExecute.srv  AccL.srv  Arc.srv  Arch.srv  Circle.srv  DOExecute.srv  EnableRobot.srv  GetHoldRegs.srv  JointMovJ.srv  Jump.srv  LimZ.srv  MoveJog.srv  RelMovL.srv  RobotMode.srv  RunScript.srv  ServoJ.srv  ServoP.srv  SetArmOrientation.srv  SetCollisionLevel.srv  SetHoldRegs.srv  SetObstacleAvoid.srv  SpeedFactor.srv  SpeedJ.srv  StartPath.srv  StartTrace.srv  ToolDOExecute.srv
src/rxx_configure_service/: CMakeLists.txt  package.xml
src/rxx_configure_service/config/: arm_config.yaml  camera_config.yaml  grap_config.yaml  rest-api.http
src/rxx_configure_service/include/: Kutil.cpp
src/rxx_configure_service/launch/: calibration.launch.py  rxx_configure_service.launch.py
src/rxx_configure_service/src/: calibration_collect.cpp  device_launch_conf.cpp  device_launch_conf.h  main.cpp  network_config.h  network_control.cpp  network_control.h
